# HDRDisplayReadGUI

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml  Package.yml
resources/: open_source_licenses.txt
src/: base_window.cpp  base_window.h  display_enumerator.cpp  display_enumerator.h  embeds.cpp  embeds.h  file_dialog.cpp  file_dialog.h  gui_window.cpp  gui_window.h  header_impl.cpp  helpers.cpp  helpers.h  instrument_manager.cpp  instrument_manager.h  main.cpp  measurement_manager.cpp  measurement_manager.h  precompiled_header.h  render_resources.cpp  render_resources.h  resource.h  resource.rc  signal_generator_window.cpp  signal_generator_window.h  subprocess.cpp  subprocess.h
src/shaders/: cpp_shared.hlsli  signal_generator.hlsl
